tests/checker/ok/html_literal_view.can
Model = String

Item = (String) => Html {
    <li>{String -> Escaped}</li>
}

View = (Model) => Html {
    <div>
        <h1>Notes</h1>
        <ul>{Model -> Item}</ul>
    </div>
}

Unit => Program {
    "groceries"
        -> Model
        -> View
        -> Print
}
