tests/checker/fail/literal_dispatch_kind_mismatch.can
Described = String

Int => Described {
    Int -> (
        * "zero" => Described { "zero" }
        * Int => Described { "many" }
    )
}

Unit => Program {
    0 -> Described -> Print
}
